--- a/projetologin.html
+++ b/projetologin.html
@@ -19,9 +19,9 @@
             <input name="senhaPessoa" type="password"<br><br>
 
             <input name="manterLogado" type="checkbox" value="manterLogado">
-            <label for="manterLogado">Manter Logado</label><br>
+            <label for="manterLogado">Manter Logado</label><br><br>
 
-            <input name="btLogin" type="submit" value="cadastrar"><br>
+            <input name="btLogin" type="submit" value="cadastrar"><br><br>
 
             <a href="" title="Ainda não tem conta?">
             <img src="" width="">
