--- a/projetologin.html
+++ b/projetologin.html
@@ -24,10 +24,10 @@
             <input name="btLogin" type="submit" value="cadastrar"><br><br>
 
             <a href="" title="Ainda não tem conta?">
-            <img src="" width="">
+            <width="300">
         </a>
         <hr>
         <a href="" title="Esqueceu a senha?">
-            <img src="" width="">
+            <width="300">
         </a>
         </fieldset>
