--- a/projetologin.html
+++ b/projetologin.html
@@ -18,7 +18,7 @@
             <label for="senhaPessoa">Senha:</label><br>
             <input name="senhaPessoa" type="password"<br><br>
 
-            <input name="manterLogado" type="checkbox" value="manterLogado"><br>
+            <input name="manterLogado" type="checkbox" value="manterLogado">
             <label for="manterLogado">Manter Logado</label><br><br>
 
             <input name="btLogin" type="submit" value="cadastrar"><br><br>
