--- a/projetologin.html
+++ b/projetologin.html
@@ -23,11 +23,9 @@
 
             <input name="btLogin" type="submit" value="cadastrar"><br><br>
 
-            <a href="" title="Ainda não tem conta?">
-            <width="300">
+            <a href="URL" title="Ainda não tem conta?">
         </a>
         <hr>
-        <a href="" title="Esqueceu a senha?">
-            <width="300">
+        <a href="URL" title="Esqueceu a senha?">
         </a>
         </fieldset>
