--- a/projetologin.html
+++ b/projetologin.html
@@ -19,7 +19,7 @@
             <input name="senhaPessoa" type="password"<br><br>
 
             <input name="manterLogado" type="checkbox" value="manterLogado">
-            <label for="manterLogado">Manter Logado</label><br><br>
+            <label for="manterLogado">Manter Logado</label><br>
 
             <input name="btLogin" type="submit" value="cadastrar"><br><br>
 
