--- a/projetologin.html
+++ b/projetologin.html
@@ -16,12 +16,12 @@
             <input name="usuarioPessoa" type="text"><br><br>
 
             <label for="senhaPessoa">Senha:</label><br>
-            <input name="senhaPessoa" type="password"<br><br>
+            <input name="senhaPessoa" type="password"><br><br>
 
             <input name="manterLogado" type="checkbox" value="manterLogado">
             <label for="manterLogado">Manter Logado</label><br>
 
-            <input name="btLogin" type="submit" value="cadastrar"><br><br>
+            <input name="btlogin" type="submit" value="login"><br><br>
 
             <a href="URL" title="Ainda não tem conta?">
         </a>
