--- a/projetologin.html
+++ b/projetologin.html
@@ -31,11 +31,11 @@
             </p>
 
             <p>
-            <a href="URL" title="Ainda não tem conta?">
+            <a href="URL" title="Ainda não tem conta?"</a>
             </p>
 
             <p>
-            <a href="URL" title="Esqueceu a senha?">
+            <a href="URL" title="Esqueceu a senha?"</a>
             </p>
         </fieldset>
     </body>
