--- a/projetologin.html
+++ b/projetologin.html
@@ -31,11 +31,11 @@
             </p>
 
             <p>
-            <a href="#URL"> Ainda não tem conta?</a>
+            <a href="URL"> Ainda não tem conta?</a>
             </p>
 
             <p>
-            <a href="#URL"> Esqueceu a senha?</a>
+            <a href="URL"> Esqueceu a senha?</a>
             </p>
         </fieldset>
     </body>
